# turbo-octo-tribble

./: .gitignore  .mcp.json  00_READ_ME_FIRST.txt  BUILD_COMPLETE.md  CHECKLIST.txt  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION.md  FILES_CREATED.md  FRONTEND_COMPLETE.md  FRONTEND_PROMPT.md  FRONTEND_SETUP.md  FRONTEND_SUMMARY.md  INDEX.md  QUICK_START.md  README.md  START_HERE.md  SUMMARY.txt  VERIFICATION.md
backend-python/: .dockerignore  .env  .env.example  Dockerfile  README.md  activate_sub_quick.py  alembic.ini  fix_subscription.py  main.py  pyproject.toml
backend-python/alembic/: README  env.py
backend-python/alembic/versions/: a499af19e5c5_initial_schema_with_all_8_tables.py  aa6ee5845e8b_add_lemon_subscription_item_id.py  ac3fd64294c4_add_storage_provider_to_models_3d.py  c10a454e6181_add_3d_model_dimensions.py
backend-python/app/: __init__.py  config.py
backend-python/app/api/: deps.py
backend-python/app/core/: __init__.py  auth.py  billing.py  emails.py  subscriptions.py
backend-python/app/db/: __init__.py  base.py  session.py
backend-python/app/middleware/: __init__.py  rate_limit.py  subscription.py
backend-python/app/models/: __init__.py  asset.py  model_3d.py  onboarding.py  product.py  restaurant.py  subscription.py  user.py  webhook_event.py
backend-python/app/schemas/: __init__.py  asset.py  model_3d.py  onboarding.py  product.py  public_menu.py  restaurant.py  subscription.py  user.py  (+1 more)
backend-python/scripts/: __init__.py  check_trial_expirations.py  create_admin.py  fix_admin_role.py  get_token.html  inspect_clerk.py  setup_rls.sql
(+69 files in other folders)
