[project]
name = "foodar-backend-api"
version = "0.1.0"
description = "FastAPI backend for Foodar restaurant AR menu platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Pydantic
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Integrations
    "clerk-backend-api>=1.0.0",
    "supabase>=2.0.0",
    "cloudinary>=1.40.0",
    "resend>=2.0.0",
    "httpx>=0.27.0",
    "svix>=1.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["."]
